vbnc/vbnc/tests/Errors/30070.vb
Class test1
    Shared Sub Main()
        Dim c As system.collections.arraylist
        Dim j As Integer
        For Each i As Integer In c

        Next j
    End Sub
End Class
